# LMSH_AI_HACK

./: .gitignore  README.md  pyproject.toml
data/: FUTURE_10.csv  MOSH.csv  MOW_MUN_10.csv  MOW_MUN_11.csv  MOW_MUN_9.csv  MOW_SCH_10.csv  MOW_SCH_11.csv  MOW_SCH_9.csv  REG.csv  innopolis_3.csv  itmo.csv  vuz_akadem.csv
raw_data/: FIN_2025.csv  FIN_2026.csv  MOW_MUN_10.csv  MOW_MUN_9.csv  MOW_MUN_9_2025.csv  MOW_REG.csv  MOW_REG_2025.csv  MOW_SCH_11.csv  MOW_SCH_11_2025.csv  MOW_SCH_9.csv  MOW_SCH_9_2025.csv  belchonok.csv  belchonok_24.csv  granit_nauki.csv  innopolis_1.csv  innopolis_1_24.csv  innopolis_2.csv  innopolis_2_24.csv  innopolis_3.csv  innopolis_3_24.csv  itmo.csv  itmo_24.csv  open.csv  open_24.csv  reg_2026.csv  vuz_akadem.csv  vuz_akadem_24.csv
src/Vlad/: EDA.ipynb  dataset.py  main.ipynb
src/pirojban/: dataset.py  idea.ipynb  idk.ipynb  learn_data.csv  main.ipynb  submission.csv  tar.csv  tar1.csv
ВСОШ ОБРАБОТКА/: main.ipynb  vsosh.ipynb  МЦ_10.txt  РЕГ  ШК_11.txt  ШК_9
ВСОШ ОБРАБОТКА/parsed/: MOW_MUN_10.csv  MOW_MUN_11.csv  MOW_MUN_9.csv  MOW_SCH_10.csv  MOW_SCH_11.csv  MOW_SCH_9.csv
ВСОШ ОБРАБОТКА/raw/: MOW_MUN_11  MOW_SCH_11  MOW_SCH_9  МСК_МЦ_10  МСК_МЦ_11  МСК_МЦ_9  МСК_ШК_10  РЕГ
ОБРАБОТКА/: FUTURE.ipynb  idk.ipynb  ВСОШ.ipynb  ВСОШ_ЗАКЛ.ipynb  ВСОШ_ЗАКЛ_2025.ipynb  ВСОШ_ШК_2025.ipynb
ОБРАБОТКА/parsed/: FUTURE_11.csv  FUTURE_9.csv  MOW_SCH_10.csv
ОБРАБОТКА/raw/: FIN_2025  FIN_2026  FIN_23\24  MOW_MUN_10  MOW_MUN_10_2025  MOW_MUN_10_23\24  MOW_MUN_11_2025  MOW_MUN_11_23\24  MOW_MUN_9  MOW_MUN_9_2025  MOW_MUN_9_23\24  MOW_REG_2025  (+37 more)
(+45 files in other folders)
