[project]
name = "lmsh-ai-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.68.4",
]
